<resources>
    <string name="app_name">NewsAppp</string>
    <string name="image_view">Image View</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_ins">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="input_password">Please fill the input below here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_instruction">Please fill the input below here</string>
    <string name="create_account">Create Account</string>
    <string name="back">back</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="_9_feb_2021">9, Feb 2021</string>
    <string name="error_text">Please enter, its error</string>
    <string name="error_pass">Password Miss Match</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="logout">Logout</string>
    <string name="breaking_news">Breaking News</string>
    <string name="highlight">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="nathania_salavi">Nathania Salavi</string>
    <string name="all">All</string>
    <string name="international">international</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_items">An Illinois town fights to save its power plant</string>
    <string name="dummy_date">15/02/2021</string>
    <string name="dummy_duration">10 Min Read</string>
    <string name="floating_button">Floating button</string>
    <string name="content_desc">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="nathaniasalavi_gmail_com">nathaniasalavi@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="account">Account</string>
    <string name="change_account">Change Account</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_account">Edit Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="bianca_drew">Bianca Drew</string>
    <string name="biancadrew_gmail_com">biancadrew@gmail.com</string>
    <string name="image_button">image button</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="daily">Daily</string>
</resources>