<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_news"
        android:layout_width="89dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <ImageView
            android:id="@+id/iv_item_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/main_banner" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_items"
        android:layout_width="252dp"
        android:layout_height="62dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:maxLines="4"
        android:text="@string/title_items"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toTopOf="@+id/cv_item_news" />

    <TextView
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sp"
        android:drawableStart="@drawable/ic_calendar"
        android:text="@string/dummy_date"
        android:maxLength="10"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_items" />

    <TextView
        android:id="@+id/tv_duration_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_person"
        android:maxLength="18"
        android:text="@string/dummy_duration"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintStart_toEndOf="@+id/tv_date_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_items" />

</androidx.constraintlayout.widget.ConstraintLayout>